--- a/style.css
+++ b/style.css
@@ -5,11 +5,8 @@
     box-sizing: border-box;
     }
     
-
-
-.background{
-    background-image: url(pri.jpg), url(fundo.jpg);
-    background-position: cover;
+.background1{
+    background-image: url(./img/pri.jpg), url(./img/fundo.jpg);
     background-repeat: no-repeat, no-repeat;
     background-position: left, right;
     display: flex;
@@ -45,31 +42,22 @@ nav ul li a{
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 4px;
-    font-size: 40pxS;
+    font-size: 15px;
+    width: 100%;
+    display: inline-block;
+    padding: 10px 0;
    
    
 }
 
 nav ul li a:hover{
-    color: #f9004d;
+    color:  #f9004d;
     transform: .4s;
-    
+    padding: 8px;
+    border-radius: 15px;
+    background-color: #f5eeee;   
 }
 
-.btn{
-    background-color: #f9004d;
-    color: #fff;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 20px 25px;
-    border-radius: 30px;
-    transition: transform .4s;
-}
-
-.btn:hover{
-    transform: scale(1.2);
-}
 
 .Main{
     position: absolute;
@@ -78,6 +66,12 @@ nav ul li a:hover{
     transform: translateY(-50%);
 }
 
+.Main p{
+  
+   color: rgb(206, 27, 176);
+   font-size: 20px;
+   margin-bottom: 50px;
+}
 
 h1{
     color: #f9004d;
@@ -98,55 +92,11 @@ h3{
     margin-bottom: 50px;
 }
 
-.Container-btn form{
-    width: 380px;
-    max-width: 100%;
-    position: relative;
-}
-
-.Container-btn form input:first-child{
-    display: inline-block;
-    width: 100%;
-    padding: 14px 130px 14px 15px;
-    border: 2px solid #f9004d;
-    border-radius: 30px;
-    outline: none;
-}
-
-.Container-btn form input:last-child{
-    position: absolute;
-    display: inline-block;
-    outline: none;
-    border: none;
-    padding: 10px 30px;
-    border-radius: 30px;
-    background-color: #f9004d;
-    color: #fff;
-    box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
-    right: 6px;
-    top: 6px;
-    
-}
-
-
-.menu{
-    position: absolute;
-    top: 28px;
-    right: 30px;
-    background-color: transparent;
-    height: 4px;
-    width: 40px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 0px 0px #ffffff;
-    z-index: -1;
-    transition: 400ms ease-in-out 0s;
-}
-
 
 .background-color-Sobre{
     min-height: 100%;
     background-color: #000;
-    background-image: url(preto.jpg), url(pri2.jpg);
+    background-image: url(./img/preto.jpg), url(./img/pri2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
@@ -175,7 +125,6 @@ h3{
    align-items: center;
    justify-content: space-around;
    margin: 0 auto;
-   background-position: cover;
    background-repeat: no-repeat;
    position: relative;
    height: 100vh;
@@ -234,7 +183,7 @@ button:hover{
 
 .container{
     background-color: #000;
-    background-image: url(fundo.jpg);
+    background-image: url(./img/fundo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: cover;
@@ -263,7 +212,7 @@ button:hover{
     align-items: center;
     justify-content: center;
     background-color:  #f9004d;
-    background-image: url(preto.jpg);
+    background-image: url(./img/preto.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -311,9 +260,6 @@ button:hover{
         filter: unset;
     }
     
-
-      
-
 .navigation-bar {
     position: absolute;
     bottom: 20px;
@@ -426,12 +372,13 @@ input {
 
 .me-contate {
     text-align: center;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center ;
     min-height: 100%;
     background-color: #000;
-    background-image: url(preto.jpg);
+    background-image: url(./img/preto.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
@@ -442,7 +389,6 @@ input {
     width: 100vw;
 
 }
-
 
 
 footer p{
@@ -470,7 +416,7 @@ footer p{
     margin: 22px 10px;
     color: #fff;
     text-decoration: none;
-    font-size: 40px;
+    font-size: 60px;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -484,9 +430,63 @@ footer p{
     
 }
 
-.end{
-    position: absolute;
-    color: #f9004d;
-    bottom: 35px;
-    font-size: 14px ;
+@media screen and (max-width: 375px){
+
+   
+    .Main h1,h3, h4{
+        text-align: center;
+        align-items: center;
+        font-size: 20px;
+
+    }
+    .Main p{
+        font-size: 15px;
+        width: 350px;
+        margin-left: 15px;
+    }
+    nav ul li a{
+        text-align: center;
+        align-items: center;
+        font-size: 20px;
+    }
+    .background-color-Sobre{
+        align-items: center;
+        text-align: center;
+    }
+    .main-sobre{
+        width: 280px;
+        height: auto;
+        border-radius: 10px;
+        margin-left: -180px;
+    }
+
+    .main-sobre img{
+        width: 200px;
+        height: 100px;
+        border-radius: 10px;
+        margin-left: -180px;
+    }
+    .Text-sobre h2 {
+        width: 80px;
+        height: auto;
+    
+    }
+    .Text-sobre  h3{
+        width: 280px;
+        height: auto;
+    }
+    ol{
+        text-align: center;
+        align-items: center;
+        font-size: 20px;
+    }
+    .Text-sobre button{
+        margin-left: -180px;
+    }
+    .me-contate p{
+        text-align: center;
+        align-items: center;
+        font-size: 20px;
+
+    }
 }
